--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -17,11 +17,9 @@ jobs:
       - name: Sphinx build
         run: |
           sphinx-build doc _build
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
         if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _build/
-          force_orphan: true
+          branch: gh-pages  # Ветка для GitHub Pages
+          folder: _build  # Папка с собранным проектом
